<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/displayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_above="@+id/inputNumbers"
            android:text=""/>

        <TextView
            android:id="@+id/inputNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:hint="@string/entertext"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:textSize="60sp"
            android:autofillHints="" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:gravity="center">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/one"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circluar_button_orange"
                android:text="@string/plus"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/five"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/six"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circluar_button_orange"
                android:text="@string/minus"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/sevenBtn"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/eight"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/nine"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/timesBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circluar_button_orange"
                android:text="@string/multiply"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circular_button"
                android:text="@string/AC"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/equalsBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circluar_button_orange"
                android:text="@string/equals"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/divideBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circluar_button_orange"
                android:text="@string/divide"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:gravity="center"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
